--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "homepage": "https://github.com/midudev/curso-platzi-react-avanzado#readme",
     "devDependencies": {
         "@babel/core": "^7.10.5",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/plugin-transform-runtime": "^7.11.0",
         "@babel/preset-env": "^7.10.4",
         "@babel/preset-react": "^7.10.4",
@@ -35,6 +36,7 @@
         "webpack-dev-server": "^3.11.0"
     },
     "dependencies": {
+        "intersection-observer": "^0.11.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-icons": "^3.10.0",
