--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
         "webpack-dev-server": "^3.11.0"
     },
     "dependencies": {
+        "@apollo/react-hooks": "^4.0.0",
+        "apollo-boost": "^0.4.9",
+        "graphql": "^15.3.0",
         "intersection-observer": "^0.11.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
