--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "now-build": "npm run build",
         "build": "webpack",
         "lint": "standard",
-        "dev": "webpack-dev-server",
+        "dev": "webpack-dev-server --history-api-fallback",
         "deploy": "vercel --prod",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -37,6 +37,7 @@
     },
     "dependencies": {
         "@apollo/react-hooks": "^4.0.0",
+        "@reach/router": "^1.3.4",
         "apollo-boost": "^0.4.9",
         "graphql": "^15.3.0",
         "intersection-observer": "^0.11.0",
