--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "apollo-boost": "^0.4.9",
         "graphql": "^15.3.0",
         "intersection-observer": "^0.11.0",
+        "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-helmet": "^6.1.0",
