--- a/now.json
+++ b/now.json
@@ -4,17 +4,18 @@
         "use": "@now/static-build",
         "src": "package.json"
     }],
-    "routes": [{
-            "src": "(.*).js",
-            "dest": "/$1.js"
+    "routes": [
+        {
+            "src": "(.*).js", "dest": "/$1.js"
         },
         {
-            "src": "(.*).json",
-            "dest": "/$1.json"
+            "src": "(.*).json", "dest": "/$1.json"
         },
         {
-            "src": "/.*",
-            "dest": "index.html"
+            "src": "(.*).png", "dest": "/$1.png"
+        },
+        {
+            "src": "/.*", "dest": "index.html"
         }
     ]
 }
