--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "dev": "webpack-dev-server --history-api-fallback",
         "deploy": "vercel --prod",
         "serve:dev": "webpack --mode 'development' && npx serve dist -s",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "cypress": "cypress open"
     },
     "repository": {
         "type": "git",
@@ -30,6 +31,7 @@
         "@babel/preset-env": "^7.10.4",
         "@babel/preset-react": "^7.10.4",
         "babel-loader": "^8.1.0",
+        "cypress": "^5.3.0",
         "html-webpack-plugin": "^4.3.0",
         "standard": "^14.3.4",
         "webpack": "^4.44.0",
